--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        #root {
+            border: 1px solid red;
+            background-color: rgb(41, 36, 36);
+            margin: 10px;
+            image-rendering: pixelated;
+        }
+    </style>
 </head>
 
 <body>
-    <canvas id="root"></canvas>
+    <canvas id="root" width="600" height="600"></canvas>
 </body>
 
 </html>
