refactor assets, update SoundManager

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 				left: 50px;
 			}
 			#dashboard {
-				background-color: rgb(99, 99, 99);
+				background-color: #636363;
 				image-rendering: pixelated;
 				z-index: 0;
 			}
